// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mobile renders mobile classes 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <div
        class="header headerMobile"
      >
        <h1
          class="title"
        >
          Help
        </h1>
      </div>
      <div
        class="container"
      >
        <h1
          class="title"
        >
          Search our Help Center
        </h1>
        <form
          class="form"
          novalidate=""
        >
          <div
            class="mobileContainer Input-sc-4gf5js-0-div text__c-txt__input___2ZeOl text__c-txt__input--media___238Mn text__is-focused___3mc46 hytfkM"
            data-garden-id="textfields.input"
            data-garden-version="3.7.0"
          >
            <label
              class="label Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
              data-garden-id="textfields.label"
              data-garden-version="3.7.0"
            >
              How can we help?
            </label>
            <input
              aria-invalid="false"
              autocapitalize="off"
              class="searchInput mobileSearchInput Input-sc-4gf5js-0 text__c-txt__input___2ZeOl text__c-txt__input--bare___2auEk kdlara"
              data-garden-id="textfields.input"
              data-garden-version="3.7.0"
              placeholder="How can we help?"
              type="search"
              value=""
            />
            <div
              class="mobileNonSearchIconContainer MediaFigure-sc-1g79mon-0 text__c-txt__input--media__figure___Qcs4_ cqfywo"
              data-garden-id="textfields.media_figure"
              data-garden-version="3.7.0"
            />
            <div
              class="mobileSearchIcon MediaFigure-sc-1g79mon-0 text__c-txt__input--media__figure___Qcs4_ cqfywo"
              data-garden-id="textfields.media_figure"
              data-garden-version="3.7.0"
            >
              <span
                class="container icon Icon--search"
                data-testid="Icon--search"
                role="button"
                tabindex="0"
                type="Icon--search"
              >
                <svg
                  aria-hidden="true"
                  realfilename="widget-icon_search.svg"
                />
              </span>
            </div>
          </div>
        </form>
      </div>
      <footer
        class="footer"
      >
        <div
          class="footer"
        >
          <a
            class="icon"
            data-testid="Icon--zendesk"
            href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
            tabindex="-1"
            target="_blank"
          >
            <svg
              realfilename="widget-icon_zendesk.svg"
              title="zendesk"
            />
          </a>
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`renders expected classes in desktop 1`] = `
<div>
  <div>
    <div>
      <div
        class="container flexContainer desktop containerDesktop"
        data-testid="scrollcontainer"
        style="height: 550px;"
      >
        <header
          class="header userHeader"
        >
          <h1
            class="title"
          >
            Help
          </h1>
          <form
            class="form"
            novalidate=""
          >
            <div
              class="desktopContainer Input-sc-4gf5js-0-div text__c-txt__input___2ZeOl text__c-txt__input--media___238Mn hytfkM"
              data-garden-id="textfields.input"
              data-garden-version="3.7.0"
            >
              <label
                class="label Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                data-garden-id="textfields.label"
                data-garden-version="3.7.0"
              >
                How can we help?
              </label>
              <input
                aria-invalid="false"
                autocapitalize="off"
                class="searchInput Input-sc-4gf5js-0 text__c-txt__input___2ZeOl text__c-txt__input--bare___2auEk kdlara"
                data-garden-id="textfields.input"
                data-garden-version="3.7.0"
                placeholder="How can we help?"
                type="search"
                value=""
              />
              <div
                class="desktopSearchOrLoading MediaFigure-sc-1g79mon-0 text__c-txt__input--media__figure___Qcs4_ cqfywo"
                data-garden-id="textfields.media_figure"
                data-garden-version="3.7.0"
              >
                <span
                  class="container notFocused icon Icon--search"
                  data-testid="Icon--search"
                  role="button"
                  tabindex="0"
                  type="Icon--search"
                >
                  <svg
                    aria-hidden="true"
                    realfilename="widget-icon_search.svg"
                  />
                </span>
              </div>
            </div>
          </form>
        </header>
        <div
          class="content"
        >
          <div />
        </div>
        <footer
          class="footer  footerShadow"
        >
          <div
            class="container containerDesktop"
          >
            <div
              class="container buttonRight buttonGroup"
            >
              <button
                class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___1jmsn index__c-btn--primary___3nbMO lcPfmb"
                data-garden-id="buttons.button"
                data-garden-version="3.7.0"
                tabindex="0"
                type="button"
              >
                Leave us a message
              </button>
            </div>
          </div>
        </footer>
      </div>
      <a
        class="
      logo
      formSuccess
      
      
    "
        href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
        tabindex="-1"
        target="_blank"
      >
        <span
          class="container icon Icon--zendesk"
          data-testid="Icon--zendesk"
          type="Icon--zendesk"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_zendesk.svg"
          />
        </span>
        <span
          class="hidden"
        >
          zendesk
        </span>
      </a>
    </div>
  </div>
</div>
`;
